# moon-Studios-Dashboard

./: .gitignore  LICENSE  README.md  index.ejs  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/Pages/: Webs.tsx
src/components/: Announcements.tsx  BarcodeScannerModal.tsx  CEOPanel.tsx  Calendar.tsx  Contador.tsx  Correo.tsx  DashboardHome.tsx  DashboardLayout.tsx  DiscordBot.tsx  EmployeeContractModal.tsx  EmployeeCredentialModal.tsx  EmployeeProfileModal.tsx  Hilos.tsx  Login.tsx  MarkdownRenderer.tsx  Mensajeria.tsx  PanelAdmin.tsx  PanelDiseno.tsx  PanelProgramacion.tsx  PanelRoles.tsx  PanelSecretaria.tsx  Proyectos.tsx  Scanauthmodal.tsx  SessionModals.tsx  Settings.tsx  TaskReportDialog.tsx  TaskReportsSummary.tsx  TitleBar.tsx  UpdateNotifier.tsx  Users.tsx
src/contexts/: AuthContext.tsx  SettingsContext.tsx
src/hooks/: useAutoLogout.ts  useIsTauri.ts  useNotifications.ts  useTabSync.ts
src/lib/: firebase.ts  notificationSound.ts  seedData.ts  supabaseclient.ts  taskReports.ts
src/services/: discordApi.ts
src/styles/: components-patch.css
src/types/: index.ts
