[package]
name = "moon-studios"
version = "1.0.2"
description = "Portal corporativo moon Studios"
authors = ["moon Studios"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"

[dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"